manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: template-for-aa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-for-aa
  template:
    metadata:
      labels:
        app: template-for-aa
    spec:
      containers:
        - name: template-for-aa
          image: ceappacr.azurecr.io/template-for-aa
          ports:
          - containerPort: 8080
